--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,89 @@ layout: compress
 <html class="no-js" lang="{% if site.language == nil %}en{% else %}{{ site.language }}{% endif %}">
 <head>
 	{% include _head.html %}
+	<div class="row t30">
+		<div class="medium-12 columns">
+		   <article itemscope itemtype="http://schema.org/Article">
+			  <header>
+				 <span itemprop="name">
+					<h1></h1>
+				 </span>
+			  </header>
+			  <span itemprop="articleSection">
+				 <div>
+					<ul class="portfolio-front">
+					   <li>
+						  <a href="/portfolio/batik/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/batik/thumbs/front_moonlight_tango.jpg" alt="Batik" />
+								<figcaption>
+								   <h3 style="padding: 0">Batik</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/decorative/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/decorative/thumbs/front_chocolate_river_24x18.jpg" alt="Decorative" />
+								<figcaption>
+								   <h3 style="padding: 0">Decorative</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/en_plein_air/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/en_plein_air/thumbs/front_alley_oil_11x14.jpg" alt="En Plein Air" />
+								<figcaption>
+								   <h3 style="padding: 0">En Plein Air</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/ethereal/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/ethereal/thumbs/front_angel_24x18.jpg" alt="Ethereal" />
+								<figcaption>
+								   <h3 style="padding: 0">Ethereal</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/flowers/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/flowers/thumbs/front_pixel_flowers_36x24.jpg" alt="Flowers" />
+								<figcaption>
+								   <h3 style="padding: 0">Flowers</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/people/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/people/thumbs/front_a_girl_with_coffe.jpg" alt="People" />
+								<figcaption>
+								   <h3 style="padding: 0">People</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					   <li>
+						  <a href="/portfolio/trees/">
+							 <figure class="tint">
+								<img class="portfolio-thumb" src="/portfolio/trees/thumbs/front_the_bended_tree_24x18.jpg" alt="Trees" />
+								<figcaption>
+								   <h3 style="padding: 0">Trees</h3>
+								</figcaption>
+							 </figure>
+						  </a>
+					</ul>
+				 </div>
+				 <!--more--> 
+			  </span>
+		   </article>
+		</div>
+	</div>
 </head>
 <body id="top-of-page" class="{{ layout.format }}">
-
 	{{ content }}
-
 </body>
 </html>
