--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -82,6 +82,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="{{ url }}/assets/mediaelement_js/mediaelement-and-player.min.js"></script>
 		<link rel="stylesheet" href="{{ url }}/assets/mediaelement_js/mediaelementplayer.min.css">
+		<link rel="stylesheet" type="text/css" href="https://olgaivkin.com/assets/css/styles_feeling_responsive.css" />
 	{% endif %}
 
 	{% include _favicon.html %}
