--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/batik/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/batik/thumbs/front_moonlight_tango.jpg" alt="Batik" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/batik/thumbs/front_moonlight_tango.jpg" alt="Batik" />
 								<figcaption>
 								   <h3 style="padding: 0">Batik</h3>
 								</figcaption>
@@ -30,7 +30,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/decorative/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/decorative/thumbs/front_chocolate_river_24x18.jpg" alt="Decorative" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/decorative/thumbs/front_chocolate_river_24x18.jpg" alt="Decorative" />
 								<figcaption>
 								   <h3 style="padding: 0">Decorative</h3>
 								</figcaption>
@@ -39,7 +39,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/en_plein_air/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/en_plein_air/thumbs/front_alley_oil_11x14.jpg" alt="En Plein Air" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/en_plein_air/thumbs/front_alley_oil_11x14.jpg" alt="En Plein Air" />
 								<figcaption>
 								   <h3 style="padding: 0">En Plein Air</h3>
 								</figcaption>
@@ -48,7 +48,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/ethereal/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/ethereal/thumbs/front_angel_24x18.jpg" alt="Ethereal" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/ethereal/thumbs/front_angel_24x18.jpg" alt="Ethereal" />
 								<figcaption>
 								   <h3 style="padding: 0">Ethereal</h3>
 								</figcaption>
@@ -57,7 +57,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/flowers/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/flowers/thumbs/front_pixel_flowers_36x24.jpg" alt="Flowers" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/flowers/thumbs/front_pixel_flowers_36x24.jpg" alt="Flowers" />
 								<figcaption>
 								   <h3 style="padding: 0">Flowers</h3>
 								</figcaption>
@@ -66,7 +66,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/people/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/people/thumbs/front_a_girl_with_coffe.jpg" alt="People" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/people/thumbs/front_a_girl_with_coffe.jpg" alt="People" />
 								<figcaption>
 								   <h3 style="padding: 0">People</h3>
 								</figcaption>
@@ -75,7 +75,7 @@ layout: compress
 					   <li>
 						  <a href="/portfolio/trees/">
 							 <figure class="tint">
-								<img class="portfolio-thumb" src="/portfolio/trees/thumbs/front_the_bended_tree_24x18.jpg" alt="Trees" />
+								<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/trees/thumbs/front_the_bended_tree_24x18.jpg" alt="Trees" />
 								<figcaption>
 								   <h3 style="padding: 0">Trees</h3>
 								</figcaption>
