--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -22,7 +22,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }}</title>
 
-    <link rel="stylesheet" type="text/css" href="{{ url }}/assets/css/styles_feeling_responsive.css">
+    	<link rel="stylesheet" type="text/css" href="https://olgaivkin.com/assets/css/styles_feeling_responsive.css" />
+		<script src="https://olgaivkin.com/assets/js/modernizr.min.js"></script> 
+		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script> 
+		<script>WebFont.load({ google: { families: [ 'Lato:400,700,400italic:latin', 'Advent+Pro::latin' ] } });</script> 
 
   {% if site.asciidoctor-enabled == true %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -82,7 +85,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="{{ url }}/assets/mediaelement_js/mediaelement-and-player.min.js"></script>
 		<link rel="stylesheet" href="{{ url }}/assets/mediaelement_js/mediaelementplayer.min.css">
-		<link rel="stylesheet" type="text/css" href="https://olgaivkin.com/assets/css/styles_feeling_responsive.css" />
 	{% endif %}
 
 	{% include _favicon.html %}
