--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
 		<div id="masthead-with-text" style="background: #6B8A78; ">
 			<div class="row">
 			   <div class="small-12 columns">
-				  <div class="masthead-title">Olga Ivkin</div>
+				  <div class="masthead-title">COCO</div>
 			   </div>
 			</div>
 		 </div>
