--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,29 +20,41 @@ layout: compress
 				<span itemprop="articleSection">
 					<div>
 						<ul class="portfolio-front">
-							<li></li>
-							<li></li>
-							<li></li>
-						<li>
-							<a href="/portfolio/people/">
+							<li>
 								<figure class="tint">
-									<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/people/thumbs/front_a_girl_with_coffe.jpg" alt="People" />
-									<figcaption>
-									<h3 style="padding: 0">Desen</h3>
-									</figcaption>
+							
 								</figure>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio/trees/">
+							</li>
+							<li>
 								<figure class="tint">
-									<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/trees/thumbs/front_the_bended_tree_24x18.jpg" alt="Trees" />
-									<figcaption>
-									<h3 style="padding: 0">Grafik</h3>
-									</figcaption>
+							
 								</figure>
-							</a>
-						</li>
+							</li>
+							<li>
+								<figure class="tint">
+							
+								</figure>
+							</li>
+							<li>
+								<a href="/portfolio/people/">
+									<figure class="tint">
+										<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/people/thumbs/front_a_girl_with_coffe.jpg" alt="People" />
+										<figcaption>
+										<h3 style="padding: 0">Desen</h3>
+										</figcaption>
+									</figure>
+								</a>
+							</li>
+							<li>
+								<a href="/portfolio/trees/">
+									<figure class="tint">
+										<img class="portfolio-thumb" src="https://olgaivkin.com/portfolio/trees/thumbs/front_the_bended_tree_24x18.jpg" alt="Trees" />
+										<figcaption>
+										<h3 style="padding: 0">Grafik</h3>
+										</figcaption>
+									</figure>
+								</a>
+							</li>
 						</ul>
 					</div>
 					<!--more--> 
