--- a/_includes/image.html
+++ b/_includes/image.html
@@ -4,9 +4,9 @@
     <div class="overlay">
       <div class="text">
         {% if include.text %}
-          {{ include.text }} <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          {{ include.text }} 
         {% else %}
-          View Demo <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          cmrckmk
         {% endif %}
       </div>
     </div>
