--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,6 @@
 <div class="image-container">
   <a href="{{ include.url }}" target="_blank">
-    <img alt="Avatar" class="image">
+    <img alt="Avatar" class="image" src="{{ include.image }}">
     <div class="overlay">
       <div class="text">
         {% if include.text %}
