--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<script>
+  var gallery = $('.gallery a').simpleLightbox({
+    spinner:true
+  });
+</script>
+
 <section>
   <div class="work-container">
     <h4 class="project-title">{{ page.title }}</h4>
