--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,3 +1,3 @@
-<a href="{{ include.image }}" target="_blank">
+<a href="{{ include.image }}" class="big">
     <img src="{{ include.thumb }}">
 </a>
