--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,12 @@
 
   </div>
 
+  <script>
+    var gallery = $('.gallery a').simpleLightbox({
+      
+    });
+  </script>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="{{ site.github.url }}/assets/js/functions.js"></script>
 
