--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,23 +48,20 @@
 
   </div>
 
-  <script>
-    var gallery = $('.gallery a').simpleLightbox({
-      
-    });
-  </script>
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="{{ site.github.url }}/assets/js/functions.js"></script>
 
-  <link href="{{ site.github.url }}/assets/js/simplelightbox/dist/simple-lightbox.min.css" rel="stylesheet" />
-  
-  <!-- As A Vanilla JavaScript Plugin -->
-  <script src="{{ site.github.url }}/assets/js/simplelightbox/dist/simple-lightbox.min.js"></script>
-  
-  <!-- For legacy browsers -->
-  <script src="{{ site.github.url }}/assets/js/simplelightbox/dist/simple-lightbox.legacy.min.js"></script>
-  <script src="{{ site.github.url }}/assets/js/simplelightbox/dist/simple-lightbox.jquery.min.js"></script>
-  
+    <!-- Core Stylesheet -->
+  <link href="{{ site.github.url }}/assets/nanogallery/css/nanogallery2.min.css" rel="stylesheet" />
+  <link href="{{ site.github.url }}/assets/nanogallery/css/nanogallery2.woff.min.css" rel="stylesheet" />
+  <!-- All In One JavaScript -->
+  <script src="{{ site.github.url }}/assets/nanogallery/jquery.nanogallery2.min.js"></script>
+  <!-- Or Load Core JavaScript -->
+  <script src="{{ site.github.url }}/assets/nanogallery/jquery.nanogallery2.core.min.js"></script>
+  <!-- And Optional Modules -->
+  <script src="{{ site.github.url }}/assets/nanogallery/jquery.nanogallery2.data_flickr.min.js"></script>
+  <script src="{{ site.github.url }}/assets/nanogallery/jquery.nanogallery2.data_google3.min.js"></script>
+  <script src="{{ site.github.url }}/assets/nanogallery/jquery.nanogallery2.data_nano_photos_provider2.min.js"></script>
+
 </body>
 </html>
