--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,3 +1,1 @@
-<a href="{{ include.image }}" class="big">
-    <img src="{{ include.thumb }}">
-</a>
+<a href="{{ include.image }}" data-ngThumb="{{ include.thumb }}"></a>
