--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,1 +1,5 @@
-<a href="{{ include.image }}" data-ngThumb="{{ include.thumb }}"></a>
+<div id="my_nanogallery2" data-nanogallery2  >
+  
+  <a href="{{ include.image }}" data-ngThumb="{{ include.thumb }}"></a>
+
+</div>
