--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,9 @@ layout: default
   <div class="work-container">
     <h4 class="project-title">{{ page.title }}</h4>
     <div class="project-load">
+      <div id="my_nanogallery2" data-nanogallery2  >
         {{ content }}
+      </div>
     </div>
   </div>
 </section>
