--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,1 +1,1 @@
-<a href="{{ include.image }}" data-ngThumb="{{ include.image }}"></a>
+<a href="{{ include.image }}" data-ngThumb="{{ include.thumb }}"></a>
